package basic;

public enum  Direction {

    EAST,
    WEST,
    NORTH,
    SOUTH;
}
