package basic;

public class Wall implements MapSite,Cloneable{

    public Wall(){

    }
    public void enter() {

    }

    @Override
    public Object clone() throws CloneNotSupportedException {
        return super.clone();
    }
}
